...
        </Text>
      </Pressable>
      <TextInput
        ref={inputRef}
        accessibilityLabel={t("tags_name_label")}
        accessibilityLabelledBy="tag-name-label"
        testID="tag-name"
        autoCorrect={false}
        style={{
          fontSize: 17,
          color: colors.textInputText,
          backgroundColor: colors.textInputBackground,
          width: "100%",
...
