...
                      analytics.disable();
                    } else {
                      analytics.enable();
                    }
                  }}
                  value={analytics.isEnabled}
                  testID="behavioral-data-enabled"
                />
              }
            />
          </MenuList>
          <TextInfo>{t("behavioral_data_help")}</TextInfo>

...
