...
          </MenuList>
          <TextInfo>{t("archive_tag_description")}</TextInfo>

          {Platform.OS === "ios" ? (
            <MenuList style={{ marginTop: 32 }}>
              <MenuListItem
                testID="tag-delete"
                title={
                  <Text
                    style={{
                      fontSize: 17,
                      textAlign: "center",
                      color: colors.dangerButtonText,
...
