...
          position: "absolute",
          right: FAB_MARGIN,
          bottom: FAB_MARGIN + insets.bottom,
        }}
      >
        <FloatButton
          testID="log-list-add"
          accessibilityLabel={t("add_entry")}
          onPress={add}
        >
          <Plus
            color={colors.primaryButtonText}
            width={24}
...
